# pmbot

./: .env.example  .gitignore  ABSTRACT.md  ORACLE_DEPLOYMENT.md  README.md  backtest_6mo.py  backtest_combined.py  backtest_compare.py  backtest_compound.py  backtest_current.py  backtest_displacement.py  backtest_freq.py  backtest_momentum.py  backtest_momentum_v2.py  backtest_optimize.py  backtest_t1_optimize.py  backtest_trend_filter.py  backtest_tuning.py  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py
docs/: architecture.md
scripts/: analyze_live_edge.py  backtest_ml_vs_sigmoid.py  check_and_redeem.py  check_positions.py  generate_poly_creds.py  measure_latency.py  retrain_model.py  run_4h_session.sh  setup_vps.sh  train_displacement_model.py  watchdog.sh
src/: main.py
src/graph/: __init__.py  workflow.py
src/layer0_ingestion/: __init__.py  cex_websocket.py  chainlink_oracle.py  data_store.py  event_bus.py  polymarket_client.py
src/layer1_research/: __init__.py  displacement_predictor.py  feature_engine.py  latency_arb.py  liquidity_scanner.py  momentum_detector.py  orchestrator.py  research_synthesis.py  spread_detector.py  trade_logger.py
src/layer2_signal/: __init__.py  alpha_signal.py  backtester.py  risk_filter.py  signal_validator.py
src/layer3_portfolio/: __init__.py  correlation_monitor.py  platform_risk.py  portfolio_manager.py  tail_risk.py
src/layer4_execution/: __init__.py  clob_adapter.py  (+4 more)
tests/: test_clob_adapter.py  test_execution.py  test_portfolio.py  test_signal_validator.py  test_spread_detector.py
(+12 files in other folders)
